[package]
name = "ohdear-application-health"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.23.0"
rocket = "0.4.10"
rocket_codegen = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[profile.release]
opt-level = 3

[[bin]]
name = "ohdear-application-health"
path = "src/main.rs"